@@ -38,7 +38,9 @@
              new global attribute <backupsymlink> added
              new global attribute <backupcmd> added
              new global attribute <backup_before_update> added
-  - feature: new module 57_Calendar.pm (Boris(   
+  - feature: new module 57_Calendar.pm (Boris)
+  - feature: new parameter <changed> for updatefhem added (M. Fischer)
+             new global attribute <exclude_from_update> added (M. Fischer)
 
 - 2011-12-31 (5.2)
   - bugfix:  applying smallscreen attributes to firefox/opera
